controller and service layer is finished