@@ -7,21 +7,18 @@ import com.epam.esm.exception.model.TagNotFoundException;
 import com.epam.esm.model.Tag;
 import com.epam.esm.service.TagService;
 import com.epam.esm.service.mapping.MappingService;
+import com.epam.esm.utils.Pageable;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.Validate;
 import org.springframework.stereotype.Service;
 
-import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-/**
- * This class implements functionality of operating  {@link TagRepository} methods in according to received
- * parameters from TagController controller.
- * Using in {@link com.epam.esm.service.GiftCertificateService} and TagController classes.
- */
+import static com.epam.esm.service.validator.PageableValidator.checkParams;
+import static com.epam.esm.service.validator.PageableValidator.validate;
+
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -30,13 +27,14 @@ public class TagServiceImpl implements TagService {
     private final MappingService<Tag, TagDTO> mappingService;
 
     @Override
-    public void save(TagDTO tagDTO) throws TagAlreadyExistsException {
+    public TagDTO save(TagDTO tagDTO) throws TagAlreadyExistsException {
         Tag tag = mappingService.mapFromDto(tagDTO);
+        log.debug("is exists tag : {}", tagRepository.isExists(tag));
         if (tagRepository.isExists(tag)) {
             log.error("[TagService.save()] Tag with given name:[{}] already exists.", tagDTO.getName());
             throw new TagAlreadyExistsException(String.format("Tag with given name:[%s] already exists.", tagDTO.getName()));
         }
-        tagRepository.save(tag);
+        return mappingService.mapToDto(tagRepository.save(tag));
     }
 
     @Override
@@ -57,45 +55,48 @@ public class TagServiceImpl implements TagService {
     }
 
     @Override
-    public List<TagDTO> findAllByName(String name) {
+    public TagDTO findByName(String name) {
         Validate.notBlank(name);
-        List<TagDTO> tagDTO = tagRepository.findAllByName(name)
-                .stream()
-                .flatMap(Collection::stream)
+        TagDTO tagDTO = tagRepository.findByName(name)
                 .map(mappingService::mapToDto)
-                .collect(Collectors.toList());
-        if (tagDTO.isEmpty()) {
-            log.error("[TagService.findByName()] Tag for given name:[{}] not found", name);
-            throw new TagNotFoundException(String.format("Tag not found (name:[%s])", name));
-        } else {
-            log.debug("[TagService.findByName()] Tag received from database: [{}], for name:[{}]", tagDTO, name);
-            return tagDTO;
-        }
+                .orElseThrow(() -> {
+                    log.error("[TagService.findByName()] Tag for given name:[{}] not found", name);
+                    throw new TagNotFoundException(String.format("Tag not found (name:[%s])", name));
+                });
+
+        log.debug("[TagService.findByName()] Tag received from database: [{}], for name:[{}]", tagDTO, name);
+        return tagDTO;
     }
 
     @Override
-    public List<TagDTO> findAll() {
-        List<TagDTO> tags = tagRepository.findAll()
+    public List<TagDTO> findAll(Pageable pageable) {
+        validate(pageable);
+        List<TagDTO> tags = tagRepository.findAll(checkParams(pageable, tagRepository))
                 .stream()
-                .flatMap(Collection::stream)
                 .map(mappingService::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
+        if (tags.isEmpty()) {
+            log.error("[TagService.findAll()] Tags not found");
+            throw new TagNotFoundException("Tags not found");
+        }
         log.debug("[TagService.findAll()] Tags received from database: [{}]", tags);
         return tags;
     }
 
     @Override
-    public void deleteById(Long id) {
+    public TagDTO deleteById(Long id) {
         if (id == null || id < 1) {
             log.error("[TagService.deleteById()] An exception occurs: id:[{}] can't be less than zero", id);
             throw new IllegalArgumentException("Tag.id can't be less than zero.");
         }
         Optional<Tag> tag = tagRepository.findById(id);
+        log.debug("Delete tag : {}", tag);
         if (tag.isEmpty() || !tagRepository.isExists(tag.get())) {
             log.error("[TagService.deleteById()] Tag with given id:[{}] not found.", id);
             throw new TagNotFoundException(String.format("Tag with given id:[%d] not found for delete.", id));
         }
-        tagRepository.deleteById(id);
+
         log.debug("[TagService.deleteById()] Tag for ID:[{}] removed", id);
+        return mappingService.mapToDto(tagRepository.deleteById(id));
     }
 }
